Fix bug where scrollbar would appear, move images to seperate folder,import and apply 'Roboto' font

--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,7 @@
 @font-face {
-    font-family: 'NorseBold'; /* Name of the font */
-    src: url('Norse-Bold.otf') format('opentype'); /* Path to the .otf file */
-    font-weight: normal; /* Optional: Specify font weight */
-    font-style: normal; /* Optional: Specify font style */
+    font-family: 'NorseBold'; 
+    src: url('Norse-Bold.otf') format('opentype'); 
+    font-weight: normal; 
 }
 *{
     margin: 0;
@@ -10,23 +9,24 @@
     box-sizing: border-box;
 }
 html,body{
-    box-sizing: border-box;
-    max-height: 100vh;
+    height: 100dvh;
+    height: 100vh;
     margin: 0;
     padding:0;
+    font-family: "Roboto", sans-serif;
 }
 body {
     display: grid;
-    grid-template-columns: 40% 60%; 
-    grid-template-rows: auto; 
-    min-height: 100vh;
-    max-height: 100vh;
+    grid-template-columns: 40% 60%;  
+    grid-template-rows: 100%;
+    height: 100dvh;
+    height: 100vh;
 }
 /*form styles */
 #form-container{
     grid-column: 2; 
     display: grid;
-    grid-template-rows: 35% 30% 35%;
+    grid-template-rows: 35fr 30fr 35fr;
 }
 #introduction-section, #button-section{
     background-color: rgb(240, 243, 245);
@@ -75,7 +75,10 @@ body {
     max-width: 100%; 
 }
 #button-section{
-    display: block;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
     padding:2rem;
     
 }
@@ -83,6 +86,11 @@ button{
     padding:0.5rem 3rem;
     margin-bottom: 1rem;
     border-radius: 5px;
+    background-color: #596D48;
+}
+a{
+    color:#596D48;
+    text-decoration: none;
 }
 
 /*picture styles */
@@ -95,6 +103,7 @@ button{
     width: 100%;
     height: 100%;
     object-fit: cover;
+    display: block;
 }
 figure{
     position: absolute; 
@@ -111,7 +120,7 @@ figure{
 }
 figure img{
     width: auto;
-    height: 80%;
+    max-height: 100%;
     max-width: 15%;
 }
 
